feat: Complete R3E Labs documentation overhaul with OpenR3E integration - Add OpenR3E as 7th core project with comprehensive documentation, standardize project naming across all files, fix animation delays to consistent 50ms intervals, update project count from 6 to 7, create consistency guide for future maintenance, enhanced website with OpenR3E project card and improved descriptions, updated performance metrics and technology stacks, established professional presentation standards for enterprise-ready documentation ecosystem

--- a/website/index.html
+++ b/website/index.html
@@ -127,7 +127,7 @@
                 </p>
                 <div class="hero-stats">
                     <div class="stat-item">
-                        <span class="stat-number">4</span>
+                        <span class="stat-number">7</span>
                         <span class="stat-label">Core Projects</span>
                     </div>
                     <div class="stat-item">
@@ -274,8 +274,62 @@
                 </p>
             </div>
             <div class="projects-grid">
-                <!-- Neo N3 MCP Server -->
+                <!-- Neo N3 C++ Full Node -->
                 <div class="project-card" data-aos="fade-up">
+                    <div class="project-header">
+                        <div class="project-icon">
+                            <i data-feather="cpu"></i>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/r3e-network/neo-n3-cpp-node" target="_blank" rel="noopener noreferrer" class="project-link">
+                                <i data-feather="github"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <h3 class="project-title">Neo N3 C++ Full Node</h3>
+                    <p class="project-subtitle">Enterprise Performance Full Node</p>
+                    <p class="project-description">
+                        High-performance, production-ready Neo N3 full node implementation in C++ for maximum 
+                        efficiency and system-level optimization. Features enterprise-grade performance, 
+                        memory management, and native C++ APIs for blockchain integration.
+                    </p>
+                    <div class="project-tags">
+                        <span class="tag">C++</span>
+                        <span class="tag">Full Node</span>
+                        <span class="tag">Enterprise</span>
+                        <span class="tag">Performance</span>
+                    </div>
+                </div>
+
+                <!-- Neo N3 Rust Full Node -->
+                <div class="project-card" data-aos="fade-up" data-aos-delay="50">
+                    <div class="project-header">
+                        <div class="project-icon">
+                            <i data-feather="shield"></i>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/r3e-network/neo-n3-rust-node" target="_blank" rel="noopener noreferrer" class="project-link">
+                                <i data-feather="github"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <h3 class="project-title">Neo N3 Rust Full Node</h3>
+                    <p class="project-subtitle">Memory-Safe Modern Full Node</p>
+                    <p class="project-description">
+                        Modern, memory-safe Neo N3 full node implementation in Rust, designed for reliability, 
+                        security, and developer experience. Features WebAssembly plugin system, built-in 
+                        observability, and async runtime for high performance.
+                    </p>
+                    <div class="project-tags">
+                        <span class="tag">Rust</span>
+                        <span class="tag">Full Node</span>
+                        <span class="tag">Memory Safe</span>
+                        <span class="tag">Async</span>
+                    </div>
+                </div>
+
+                <!-- Neo N3 MCP Server -->
+                <div class="project-card" data-aos="fade-up" data-aos-delay="100">
                     <div class="project-header">
                         <div class="project-icon">
                             <i data-feather="server"></i>
@@ -290,7 +344,7 @@
                         </div>
                     </div>
                     <h3 class="project-title">Neo N3 MCP Server</h3>
-                    <p class="project-subtitle">Model Context Protocol Integration</p>
+                    <p class="project-subtitle">AI-Native Blockchain Integration</p>
                     <p class="project-description">
                         An MCP server providing 34 tools and 9 resources for comprehensive Neo N3 blockchain 
                         interaction. Features network management, wallet operations, smart contract interactions, 
@@ -299,13 +353,13 @@
                     <div class="project-tags">
                         <span class="tag">TypeScript</span>
                         <span class="tag">MCP</span>
-                        <span class="tag">Neo N3</span>
+                        <span class="tag">AI Integration</span>
                         <span class="tag">Blockchain</span>
                     </div>
                 </div>
 
                 <!-- Neo Rust Smart Contract DevPack -->
-                <div class="project-card" data-aos="fade-up" data-aos-delay="100">
+                <div class="project-card" data-aos="fade-up" data-aos-delay="150">
                     <div class="project-header">
                         <div class="project-icon">
                             <i data-feather="code"></i>
@@ -320,7 +374,7 @@
                         </div>
                     </div>
                     <h3 class="project-title">Neo Rust Smart Contract DevPack</h3>
-                    <p class="project-subtitle">Write Neo N3 Smart Contracts in Rust</p>
+                    <p class="project-subtitle">Rust for Smart Contracts</p>
                     <p class="project-description">
                         Enable developers to write Neo N3 smart contracts using Rust, bringing memory safety 
                         and performance to Neo blockchain development with familiar syntax and comprehensive 
@@ -350,7 +404,7 @@
                         </div>
                     </div>
                     <h3 class="project-title">Neo Rust SDK</h3>
-                    <p class="project-subtitle">Comprehensive Neo N3 and Neo X SDK</p>
+                    <p class="project-subtitle">Multi-Chain Rust Development</p>
                     <p class="project-description">
                         A powerful SDK for interacting with both Neo N3 and Neo X blockchains using Rust. 
                         Features multi-blockchain support, type-safe interactions, high-performance RPC client, 
@@ -361,6 +415,36 @@
                         <span class="tag">SDK</span>
                         <span class="tag">Neo N3</span>
                         <span class="tag">Neo X</span>
+                    </div>
+                </div>
+
+                <!-- OpenR3E -->
+                <div class="project-card" data-aos="fade-up" data-aos-delay="250">
+                    <div class="project-header">
+                        <div class="project-icon">
+                            <i data-feather="shield-check"></i>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://docs.openr3e.org" target="_blank" rel="noopener noreferrer" class="project-link">
+                                <i data-feather="external-link"></i>
+                            </a>
+                            <a href="https://github.com/r3e-network/openr3e" target="_blank" rel="noopener noreferrer" class="project-link">
+                                <i data-feather="github"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <h3 class="project-title">OpenR3E</h3>
+                    <p class="project-subtitle">Secure Contract Libraries for dApps</p>
+                    <p class="project-description">
+                        Comprehensive collection of secure, audited smart contract libraries for Neo N3 dApp development. 
+                        Provides battle-tested components for tokens, DeFi, access control, and utilities with 
+                        50% gas optimization and security best practices.
+                    </p>
+                    <div class="project-tags">
+                        <span class="tag">C#</span>
+                        <span class="tag">Smart Contracts</span>
+                        <span class="tag">Security</span>
+                        <span class="tag">dApp Libraries</span>
                     </div>
                 </div>
 
@@ -377,9 +461,9 @@
                         </div>
                     </div>
                     <h3 class="project-title">Neo Service Layer</h3>
-                    <p class="project-subtitle">Comprehensive Secure Services Platform</p>
+                    <p class="project-subtitle">Secure Oracle & Infrastructure Platform</p>
                     <p class="project-description">
-                        Oracle services and critical infrastructure using Intel SGX with Occlum LibOS enclaves. 
+                        Comprehensive secure services platform using Intel SGX with Occlum LibOS enclaves. 
                         Includes randomness, oracle, data feeds, key management, compute, storage, compliance, 
                         and advanced AI-powered services.
                     </p>
@@ -580,9 +664,12 @@
                 <div class="footer-section">
                     <h3 class="footer-title">Projects</h3>
                     <ul class="footer-links">
+                        <li><a href="https://github.com/r3e-network/neo-n3-cpp-node" target="_blank" rel="noopener noreferrer">Neo N3 C++ Node</a></li>
+                        <li><a href="https://github.com/r3e-network/neo-n3-rust-node" target="_blank" rel="noopener noreferrer">Neo N3 Rust Node</a></li>
                         <li><a href="https://neomcp.xyz" target="_blank" rel="noopener noreferrer">Neo N3 MCP Server</a></li>
-                        <li><a href="https://neo-rust.netlify.app" target="_blank" rel="noopener noreferrer">Neo Rust DevPack</a></li>
+                        <li><a href="https://neo-rust.netlify.app" target="_blank" rel="noopener noreferrer">Neo Rust Smart Contract DevPack</a></li>
                         <li><a href="https://neorust.netlify.app" target="_blank" rel="noopener noreferrer">Neo Rust SDK</a></li>
+                        <li><a href="https://docs.openr3e.org" target="_blank" rel="noopener noreferrer">OpenR3E Libraries</a></li>
                         <li><a href="https://github.com/r3e-network/neo-service-layer" target="_blank" rel="noopener noreferrer">Neo Service Layer</a></li>
                     </ul>
                 </div>
