Add NeoAuth OAuth 2.0 & zkEmail service with comprehensive documentation and update all service counts to 15 current + 6 planned = 21 total Neo services including NeoFlow for smart contract automation

--- a/website/index.html
+++ b/website/index.html
@@ -464,8 +464,8 @@
                     <p class="project-subtitle">Secure Oracle & Infrastructure Platform</p>
                     <p class="project-description">
                         Comprehensive secure services platform using Intel SGX with Occlum LibOS enclaves. 
-                        Includes randomness, oracle, data feeds, key management, compute, storage, compliance, 
-                        and advanced AI-powered services.
+                        Features NeoOracle, NeoVault, NeoMind, NeoWatch, NeoCompute, NeoFlow, and other 
+                        enterprise-grade services with TEE security and AI-powered capabilities.
                     </p>
                     <div class="project-tags">
                         <span class="tag">C#</span>
